fix gap

--- a/src/app/components/heroMobile/index.module.css
+++ b/src/app/components/heroMobile/index.module.css
@@ -16,7 +16,7 @@
   flex-direction: column;
   align-items: start;
   justify-content: center;
-  gap: 1.5rem;
+  gap: 2rem;
 }
 
 .content h1 {
@@ -82,6 +82,14 @@
 }
 
 @media screen and (min-width: 500px) {
+  .container {
+    padding: 2rem 0 0 1rem;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+  }
+
   .content h1 {
     color: #fff;
     font-size: 58px;
